--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@adobe/react-spectrum": "^3.34.1",
     "@nextui-org/react": "^2.2.10",
     "next": "14.2.0",
+    "next-share": "^0.27.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-spectrum": "^1.2.6"
+    "react-icons": "^5.1.0",
+    "react-spectrum": "^1.2.6",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@types/node": "^20",
